<resources>
    <string name="app_name">OnlineschoolRudykLSproject</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="people">people</string>
    <string name="add_lesson">Add lesson</string>
    <string name="enter_lesson_name">Enter lesson name</string>
    <string name="grade">Grade</string>
    <string name="value">value</string>
    <string name="enter_description">Enter description</string>
    <string name="save_lesson">Save lesson</string>
    <string name="todo">TODO</string>
</resources>