<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    tools:context=".Presentation.View.AddFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <ImageButton
                    android:id="@+id/back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@android:color/transparent"
                    android:minWidth="40dp"
                    android:src="@android:drawable/ic_media_rew"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/add_lesson1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:gravity="center_vertical"
                    android:text="@string/add_lesson"
                    android:textSize="18sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/lesson_name1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:autofillHints="enter_lesson_name"

                android:hint="@string/enter_lesson_name"
                android:inputType="text"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/grade1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:gravity="center|center_vertical"
                    android:text="@string/grade"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/lesson_grade1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/value"
                    android:inputType="number"
                    android:textAlignment="center"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

            <EditText
                android:id="@+id/lesson_description1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/enter_description"

                android:inputType="textMultiLine"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="@string/save_lesson"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>